--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth-kit/react-router": "^3.1.3",
     "@reduxjs/toolkit": "^2.4.0",
     "@tanstack/react-query": "^5.62.0",
     "axios": "^1.7.8",
     "react": "^18.3.1",
+    "react-auth-kit": "^3.1.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-input-mask": "^3.0.6",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
