--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-icons": "^5.3.0",
     "react-input-mask": "^2.0.4",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^7.0.1"
+    "react-router": "^7.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
