--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "react-icons": "^5.3.0",
     "react-input-mask": "^2.0.4",
     "react-redux": "^9.1.2",
-    "react-router": "^7.0.2"
+    "react-router": "^7.0.2",
+    "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-input-mask": "^3.0.6",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
